# laughing-octo-happiness

./: .clangd  .gitignore  README.md  animator.py  build.bat  build.sh  config.py  main.py  overlay.py  requirements.txt  run.bat  run.sh  sprite.py  status_monitor.py  version.py
.github/: copilot-instructions.md
.github/agents/: expert-cpp-software-engineer.agent.md  pr-reviewer.agent.md  pr-reviewer.md  se-system-architecture-reviewer.agent.md  test-engineer.agent.md  test-engineer.md
.github/workflows/: ci-linux.yml  ci-windows.yml  ci.yml
app/: CMakeLists.txt  architecture.md  build_and_run.sh
app/include/: anim_state.h  auth.h  config.h  copilot_api.h  event_parser.h  font_utils.h  info_renderer.h  input_handler.h  platform.h  render_logic.h  sprite_renderer.h  status_monitor.h  text_renderer.h
app/src/: anim_state.cpp  auth.cpp  copilot_api.cpp  event_parser.cpp  info_renderer.cpp  input_handler.cpp  main.cpp  platform_linux.cpp  platform_macos.cpp  platform_windows.cpp  sprite_renderer.cpp  status_monitor.cpp  text_renderer.cpp
app/tests/: CMakeLists.txt  raylib_mock.cpp  smoke_mock.cpp  test_anim_state.cpp  test_config.cpp  test_copilot_api.cpp  test_event_parser.cpp  test_find_session.cpp  test_render_logic.cpp  test_renderers.cpp
build2/: Makefile
cpp/include/: config.h  sprite_renderer.h
cpp/src/: sprite_renderer.cpp  status_monitor.cpp
docs/: cpp-rewrite-research.md  p1-01-SUMMARY.md
tests/: test_config.py  test_sprite.py  test_status_monitor.py  test_version.py
